# snpquest

./: .gitignore  Cargo.toml  readme.md
data/: test.kmers
example/: .gitignore  Snakefile  batch_snake.sh  config_kmers.yaml
output/: test_sample.snps
src/: main.rs  snpforge.rs
