[package]
name = "snpquest"
version = "0.1.0"
edition = "2021"

# To switch between different implementations of the kmer counting data structure, set the default below.
[features]
default = ["fxhashmap"]
intmap = []
nohashmap = []
fxhashmap = []

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
intmap =  { version = "2.0.0" }
rustc-hash = { version = "1.1" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
noodles-bcf = "0.16.0"
noodles-vcf = "0.16.0"
noodles-core = "0.16.0"